[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/GrayTiles.png" type="Texture" id=1]
[ext_resource path="res://Scenes/TilesParent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Tile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/MusicCaller.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/SomeButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=6]
[ext_resource path="res://Resources/DefaultFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/Cam.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=1]
resource_name = "StartMenu"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("GrayTiles:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 16 ), Vector2( 160, 48 ), Vector2( 160, 40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GrayTiles:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 216 ), Vector2( 0, 152 ) ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -64.0
margin_top = -64.0
margin_right = 384.0
margin_bottom = 256.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TilesParent" parent="." instance=ExtResource( 2 )]
menu = true

[node name="Tile11" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 80, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile12" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 96, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile13" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 112, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile14" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 128, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile15" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 144, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile16" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 160, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile17" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 176, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile18" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 192, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile19" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 208, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile20" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 224, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile21" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 80, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile22" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 96, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile23" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 112, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile24" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 128, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile25" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 144, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile26" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 160, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile27" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 176, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile28" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 192, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile29" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 208, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile30" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 224, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile31" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 80, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile32" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 96, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile33" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 112, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile34" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 128, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile41" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 16, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile42" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 32, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile43" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 48, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile44" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 64, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile45" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 16, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile46" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 32, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile47" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 48, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile48" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 64, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile49" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 16, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile53" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 0, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile54" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 0, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile55" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 0, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile50" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 32, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile51" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 48, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile52" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 64, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile35" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 144, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile36" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 160, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile37" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 176, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile38" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 192, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile39" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 208, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile40" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 224, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile56" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 240, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile57" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 240, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile58" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 240, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile59" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 256, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile60" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 272, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile61" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 288, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile62" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 304, 88 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile63" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 256, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile64" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 272, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile65" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 288, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile66" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 304, 104 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile67" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 256, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile68" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 272, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile69" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 288, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="Tile70" parent="TilesParent" instance=ExtResource( 3 )]
position = Vector2( 304, 120 )
basePosition = Vector2( 0, 88 )
limitInit = Vector2( 0, 88 )
limitEnd = Vector2( 304, 120 )

[node name="GrayTiles" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 160, 16 )
texture = ExtResource( 1 )

[node name="Cam" parent="." instance=ExtResource( 8 )]
position = Vector2( 160, 90 )

[node name="MusicCaller" parent="." instance=ExtResource( 4 )]
song = "GrayTiles"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 216.0
margin_right = 320.0
margin_bottom = 244.0
custom_constants/separation = 5
alignment = 1

[node name="Start" parent="HBoxContainer" instance=ExtResource( 5 )]
margin_left = 37.0
margin_right = 72.0
margin_bottom = 28.0
disabled = true
text = "start"

[node name="Settings" parent="HBoxContainer" instance=ExtResource( 5 )]
margin_left = 77.0
margin_right = 133.0
margin_bottom = 28.0
disabled = true
text = "settings"

[node name="Palettes" parent="HBoxContainer" instance=ExtResource( 5 )]
margin_left = 138.0
margin_right = 180.0
margin_bottom = 28.0
disabled = true
text = "colors"

[node name="MusicBox" parent="HBoxContainer" instance=ExtResource( 5 )]
margin_left = 185.0
margin_right = 250.0
margin_bottom = 28.0
disabled = true
text = "music_box"

[node name="Quit" parent="HBoxContainer" instance=ExtResource( 5 )]
margin_left = 255.0
margin_right = 283.0
margin_bottom = 28.0
disabled = true
text = "quit"

[node name="Intruction" type="Label" parent="."]
margin_top = 48.0
margin_right = 320.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 7 )
text = "intruction_0"
align = 1

[node name="Intruction2" type="Label" parent="Intruction"]
margin_top = 96.0
margin_right = 320.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 7 )
text = "intruction_1"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/StartMenu = SubResource( 1 )

[connection signal="pressed" from="HBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="HBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="HBoxContainer/Palettes" to="." method="_on_Palettes_pressed"]
[connection signal="pressed" from="HBoxContainer/MusicBox" to="." method="_on_MusicBox_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
